--- a/public/css/index.css
+++ b/public/css/index.css
@@ -10,31 +10,108 @@ body {
   min-height: 100%;
   position: relative; }
 
-.blue_bar {
-  background-color: #5D89DA;
-  width: 6000px;
-  height: 10px;
-  margin: 0; }
-
 .welcome {
   display: flex;
   justify-content: center;
   margin-left: 15%;
   margin-top: 66px; }
+  @media all and (max-device-width: 480px) {
+    .welcome {
+      margin: 0;
+      margin-top: 160px;
+      width: 100%; } }
 
 .welcome_img {
   width: 100vw;
   opacity: 0.6; }
 
 .welcome_t {
-  font-size: 36pt;
   background-color: #5D89DA;
   color: #FFFFFF;
+  text-decoration: none;
+  font-size: 36pt;
   text-align: center;
   font-weight: normal;
   width: 450px;
   position: absolute;
   margin-top: 10%; }
+  @media screen and (max-width: 800px) {
+    .welcome_t {
+      width: 20%;
+      min-width: 180px;
+      font-size: 120%; } }
+  @media all and (max-device-width: 480px) {
+    .welcome_t {
+      font-size: 42pt;
+      width: 450px; } }
+
+.blue_bar {
+  background-color: #5D89DA;
+  width: 100%;
+  height: 10px;
+  margin: 0; }
+  @media all and (max-device-width: 480px) {
+    .blue_bar {
+      height: 30px; } }
+
+.show_admin {
+  background-color: #5D89DA;
+  color: #FFFFFF;
+  text-decoration: none;
+  padding: 10px;
+  margin-right: 10px;
+  font-size: 100%;
+  float: left;
+  margin-bottom: 10px; }
+  @media screen and (max-width: 1100px) {
+    .show_admin {
+      font-size: 10pt; } }
+  @media screen and (max-width: 800px) {
+    .show_admin {
+      font-size: 55%;
+      padding: 5px; } }
+  @media all and (max-device-width: 480px) {
+    .show_admin {
+      padding: 10px;
+      float: left;
+      margin: 1%;
+      font-size: 30pt;
+      border: none;
+      border-radius: 2px;
+      box-shadow: 2px 2px 6px #999;
+      margin-top: 70px; } }
+
+.show_admin:hover {
+  background-color: #FFC252; }
+
+.create {
+  background-color: #5D89DA;
+  color: #FFFFFF;
+  text-decoration: none;
+  font-size: 120%;
+  padding: 10px;
+  margin: 1% 1%;
+  float: right;
+  border: none;
+  border-radius: 2px;
+  box-shadow: 2px 2px 6px #999; }
+  @media screen and (max-width: 1100px) {
+    .create {
+      float: left;
+      margin: 1% 26%;
+      font-size: 100%; } }
+  @media screen and (max-width: 800px) {
+    .create {
+      float: left;
+      margin: 1% 30%; } }
+  @media all and (max-device-width: 480px) {
+    .create {
+      float: left;
+      margin: 1% 30%;
+      font-size: 26pt; } }
+
+.create:hover {
+  background-color: #FFC252; }
 
 .events {
   margin-left: 15%; }
@@ -44,6 +121,9 @@ body {
   text-align: center;
   font-size: 180%;
   font-weight: normal; }
+  @media screen and (max-width: 800px) {
+    .t1 {
+      font-size: 20pt; } }
 
 .t2 {
   font-size: 160%;
@@ -51,67 +131,57 @@ body {
   color: #000000;
   font-weight: normal;
   margin-left: 1%; }
-
-.event_date {
-  color: #000000;
-  font-size: 140%;
-  font-weight: normal; }
+  @media screen and (max-width: 800px) {
+    .t2 {
+      font-size: 15pt; } }
 
 .event {
   display: flex;
   justify-content: center;
   align-items: flex-start; }
 
+.img_event {
+  width: 600px;
+  margin: 20px; }
+  @media screen and (max-width: 800px) {
+    .img_event {
+      width: 400px; } }
+
 .texte {
   width: 150%; }
+  @media screen and (max-width: 800px) {
+    .texte {
+      width: 400px; } }
 
 .event_date {
   color: #FFC252;
+  font-size: 140%;
   font-weight: bold; }
-
-.location, .description {
-  color: #000000;
-  font-size: 120%; }
 
 .name {
   color: #FFC252;
   font-size: 150%;
   text-transform: uppercase; }
 
-.show, .show_admin {
-  background-color: #5D89DA;
-  color: #FFFFFF;
-  text-decoration: none;
-  font-size: 120%;
-  padding: 10px;
-  margin-right: 10px;
-  margin-bottom: 10px; }
-
-.show, .create {
-  border: none;
-  border-radius: 2px;
-  box-shadow: 2px 2px 6px #999; }
+.location, .description {
+  color: #000000;
+  font-size: 120%; }
 
 .show {
-  margin-bottom: 80px;
-  float: right; }
-
-.show_admin {
-  font-size: 100%;
-  float: left; }
-
-.img_event {
-  width: 600px;
-  margin: 20px; }
-
-.create {
   background-color: #5D89DA;
   color: #FFFFFF;
   text-decoration: none;
-  font-size: 120%;
+  border: none;
+  border-radius: 2px;
+  box-shadow: 2px 2px 6px #999;
   padding: 10px;
-  margin: 1% 1%;
-  float: right; }
+  margin-right: 10px;
+  margin-bottom: 80px;
+  float: right;
+  font-size: 120%; }
+
+.show:hover {
+  background-color: #FFC252; }
 
 @media screen and (max-width: 1100px) {
   .event {
@@ -122,62 +192,14 @@ body {
     width: 550px; }
 
   .texte {
-    width: 550px; }
-
-  .show_admin {
-    font-size: 10pt; }
-
-  .create {
-    float: left;
-    margin: 1% 26%;
-    font-size: 100%; } }
-@media screen and (max-width: 800px) {
-  .welcome_t {
-    width: 20%;
-    min-width: 180px;
-    font-size: 120%; }
-
-  .show_admin {
-    font-size: 55%;
-    padding: 5px; }
-
-  .t1 {
-    font-size: 20pt; }
-
-  .t2 {
-    font-size: 15pt; }
-
-  .img_event {
-    width: 400px; }
-
-  .texte {
-    width: 400px; }
-
-  .create {
-    float: left;
-    margin: 1% 30%; } }
+    width: 550px; } }
 @media all and (max-device-width: 480px) {
-  .blue_bar {
-    height: 30px; }
-
-  .welcome {
-    margin-top: 160px;
-    margin-left: 0; }
-
   .events {
     margin-left: 0; }
-
-  .welcome_t {
-    font-size: 25pt;
-    width: 350px; }
 
   .event {
     flex-direction: column;
     align-items: center; }
-
-  .welcome_t {
-    font-size: 42pt;
-    width: 450px; }
 
   .t1 {
     font-size: 30pt; }
@@ -205,21 +227,6 @@ body {
   .show {
     padding: 2% 10%;
     font-size: 27pt;
-    margin-bottom: 180px; }
-
-  .show_admin {
-    padding: 10px;
-    float: left;
-    margin: 1%;
-    font-size: 30pt;
-    border: none;
-    border-radius: 2px;
-    box-shadow: 2px 2px 6px #999;
-    margin-top: 70px; }
-
-  .create {
-    float: left;
-    margin: 1% 30%;
-    font-size: 26pt; } }
+    margin-bottom: 180px; } }
 
 /*# sourceMappingURL=index.css.map */
