--- a/resources/sass/create_edit.scss
+++ b/resources/sass/create_edit.scss
@@ -1,17 +1,4 @@
-@import 'variables';
-@import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
-
-html
-{
-    height:100%;
-}
-
-body{
-    overflow-y: hidden;
-    min-height:100%;
-    position: relative;
-}
-
+@import'general';
 
 .creation
 {
@@ -47,13 +34,10 @@ input, textarea
 
 button
 {
+    @include bg_blue;
+    @include shadow;
     font-size: 18pt;
-    border:none;
-    background-color: $blue;
     padding:6px;
-    border-radius:2px;
-    box-shadow:2px 2px 6px #999;
-    color: $white;
     float :left;
     margin-top: 10px;
     margin-bottom: 80px;
