--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -1,54 +1,7 @@
-@import 'variables';
-@import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
-
-html
-{
-    height:100%;
-}
-
-body{ overflow-y: hidden;
-    min-height:100%;
-    position: relative;}
-
-// BLUE BAR OF SEPARATION
-
-.blue_bar
-{
-    background-color: $blue;
-    width: 6000px;
-    height: 10px;
-    margin:0;
-}
-
-
-// WELCOME ASIDE
-
-.welcome
-{
-    display: flex;
-    justify-content: center;
-    margin-left: 15%;
-    margin-top: 66px;
-}
-
-.welcome_img
-{
-    width: 100vw;
-    opacity: 0.6;
-}
-
-.welcome_t
-{
-    font-size: 36pt;
-    background-color: $blue;
-    color : $white;
-    text-align: center;
-    font-weight : normal;
-    width: 450px;
-    position: absolute;
-    margin-top : 10%;
-
-}
+@import 'general';
+@import 'welcome';
+@import 'blue_bar';
+@import 'admin';
 
 // ACTUAL EVENTS & PAST EVENTS
 
@@ -64,6 +17,12 @@ body{ overflow-y: hidden;
     font-size: 180%;
     font-weight : normal;
 
+    //MEDIA QUERIES FOR PC AND IPAD
+    @media screen and (max-width: 800px)
+    {
+        font-size:20pt;
+    }
+
 }
 
 .t2
@@ -73,15 +32,15 @@ body{ overflow-y: hidden;
     color : $black;
     font-weight : normal;
     margin-left: 1%;
+
+    //MEDIA QUERIES FOR PC AND IPAD
+    @media screen and (max-width: 800px)
+    {
+        font-size: 15pt;
+    }
 }
 
-.event_date
-{
-    color: $black;
-    font-size: 140%;
-    font-weight: normal;
-}
-
+// FOR EACH EVENT
 
 .event
 {
@@ -90,23 +49,36 @@ body{ overflow-y: hidden;
     align-items: flex-start;
 
 }
+
+.img_event
+{
+    width: 600px;
+    margin : 20px;
+
+    //MEDIA QUERIES FOR PC AND IPAD
+    @media screen and (max-width: 800px)
+    {
+        width:400px;
+    }
+}
+
 .texte
 {
     width: 150%;
+
+    //MEDIA QUERIES FOR PC AND IPAD
+    @media screen and (max-width: 800px)
+    {
+        width: 400px;
+    }
 }
 
 .event_date
 {
     color: $orange;
+    font-size: 140%;
     font-weight: bold;
 }
-
-.location, .description
-{
-    color: $black;
-    font-size: 120%;
-}
-
 
 .name
 {
@@ -115,68 +87,35 @@ body{ overflow-y: hidden;
     text-transform: uppercase;
 }
 
-
-.show, .show_admin
+.location, .description
 {
-    background-color : $blue;
-    color : $white;
-    text-decoration: none;
+    color: $black;
     font-size: 120%;
+}
+
+// LINKS
+
+
+.show {
+    @include bg_blue;
+    @include shadow;
     padding : 10px;
-
     margin-right:10px ;
-    margin-bottom: 10px;
-
-}
-
-.show, .create
-{
-    border:none;
-    border-radius:2px;
-    box-shadow:2px 2px 6px #999;
-}
-
-.show
-{
     margin-bottom: 80px;
     float: right;
-
-}
-
-.show_admin
-{
-    font-size: 100%;
-    float: left;
-
-}
-
-.img_event
-{
-   width: 600px;
-   margin : 20px;
-}
-
-// CREATE EVENT
-
-.create
-{
-    background-color : $blue;
-    color : $white;
-    text-decoration: none;
     font-size: 120%;
-    padding : 10px;
-    margin: 1% 1%;
-    float: right;
 
 
 }
+
+.show:hover {
+    background-color: $orange;
+}
+
 //MEDIA QUERIES FOR PC AND IPAD
 
 @media screen and (max-width: 1100px)
 {
-
-
-
     .event
     {
 
@@ -194,65 +133,6 @@ body{ overflow-y: hidden;
     {
         width: 550px;
     }
-    .show_admin
-    {
-        font-size: 10pt;
-    }
-
-    .create
-    {
-        float: left;
-        margin:1% 26%;
-        font-size: 100%;
-    }
-
-}
-
-//MEDIA QUERIES FOR PC AND IPAD
-@media screen and (max-width: 800px)
-{
-    .welcome_t
-    {
-        width: 20%;
-        min-width: 180px;
-        font-size:120%;
-    }
-
-
-    .show_admin
-    {
-        font-size: 55%;
-        padding: 5px;
-
-    }
-
-    .t1
-    {
-        font-size:20pt;
-    }
-
-    .t2
-    {
-        font-size: 15pt;
-    }
-
-    .img_event
-    {
-        width:400px;
-    }
-
-    .texte
-    {
-        width: 400px;
-    }
-
-    .create
-    {
-        float: left;
-        margin:1% 30%;
-    }
-
-
 
 }
 
@@ -260,27 +140,11 @@ body{ overflow-y: hidden;
 
 @media all and (max-device-width : 480px )
 {
-    .blue_bar
-    {
-        height: 30px;
-    }
-
-    .welcome
-    {
-        margin-top: 160px;
-        margin-left: 0;
-    }
-
     .events
     {
         margin-left: 0;
     }
 
-    .welcome_t
-    {
-        font-size: 25pt;
-        width: 350px;
-    }
 
     .event
     {
@@ -290,11 +154,6 @@ body{ overflow-y: hidden;
 
     }
 
-    .welcome_t
-    {
-        font-size: 42pt;
-        width: 450px;
-    }
 
     .t1
     {
@@ -338,29 +197,4 @@ body{ overflow-y: hidden;
         font-size: 27pt;
         margin-bottom: 180px;
     }
-
-    .show_admin
-    {
-        padding : 10px;
-        float: left;
-        margin:1% ;
-        font-size: 30pt;
-        border:none;
-        border-radius:2px;
-        box-shadow:2px 2px 6px #999;
-        margin-top: 70px;
-    }
-
-    .create
-    {
-        float: left;
-        margin:1% 30%;
-        font-size: 26pt;
-
-    }
-
-
-
-
 }
-
