--- a/resources/sass/show.scss
+++ b/resources/sass/show.scss
@@ -1,15 +1,5 @@
-@import 'variables';
-@import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
+@import 'general';
 
-html
-{
-    height:100%;
-}
-
-body{ overflow-y: hidden;
-    min-height:100%;
-    position: relative;
-    }
 
 .events
 {
@@ -37,13 +27,6 @@ body{ overflow-y: hidden;
     text-align: left;
     color : $black;
     font-weight : normal;
-}
-
-.event_date
-{
-    color: $black;
-    font-size: 140%;
-    font-weight: normal;
 }
 
 
@@ -105,9 +88,7 @@ body{ overflow-y: hidden;
 }
 .show
 {
-    background-color : $blue;
-    color : $white;
-    text-decoration: none;
+    @include bg_blue;
     font-size: 120%;
     padding : 10px;
     float: right;
@@ -117,6 +98,11 @@ body{ overflow-y: hidden;
     border-radius:2px;
     box-shadow:2px 2px 6px #999;
 
+}
+
+.show:hover
+{
+    background-color: $orange;
 }
 
 .buttons_action
@@ -138,13 +124,14 @@ body{ overflow-y: hidden;
 
 button
 {
+    @include bg_blue;
+    @include shadow;
     font-size: 18pt;
-    border:none;
-    background-color: $blue;
     padding:6px;
     border-radius:2px;
     box-shadow:2px 2px 6px #999;
-    color: $white;
+
+
 
 }
 
@@ -317,7 +304,16 @@ button:hover
         font-size: 44pt;
         margin:40px;
 
+    }//MEDIA QUERIES FOR PC AND IPAD
+@media screen and (max-width: 800px)
+{
+    .show_admin
+    {
+        font-size: 55%;
+        padding: 5px;
+
     }
+}
 
     .like
     {
