--- a/resources/sass/nav_bar.scss
+++ b/resources/sass/nav_bar.scss
@@ -1,3 +1,6 @@
+@import 'nav_left';
+@import 'footer';
+
 .menu{
     background: black;
     width: 100%;
@@ -6,26 +9,6 @@
     position: fixed;
     z-index: 10;
 
-}
-
-.nav_left
-{
-    background-color: black;
-    top:66px;
-    width: 15%;
-    height: 100%;
-    z-index: 9;
-    position: fixed;
-}
-
-
-.logo_cesi_ingenieur
-{
-    background-color: white;
-    width: 80%;
-    z-index: 23;
-    top: 66px;
-    padding: 10%;
 }
 
 .bde{
@@ -53,7 +36,7 @@
 
 .m-left{
     float: left;
-    height: 66px;
+    /*height: 66px;*/
 }
 
 .m-right{
@@ -74,6 +57,7 @@
 
 .m-link:hover{
     border-color: white;
+    transition: 0.2s ease-in-out;
 }
 
 
@@ -90,10 +74,9 @@
 .link_nav
 {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
 
 }
-
 
 .basket , .login , .co
 {
@@ -131,46 +114,7 @@ footer
 
 }
 
-.logo_footer
-{
-    z-index: 92;
-    background-color: white;
-    width: 15%;
-    height: 66px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
-.link_footer
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 85%;
-}
-
-.footer_cesi
-{
-
-    height: 40px;
-    width: 95px;
-    padding-right : 5%;
-
-}
-.footer_bde
-{
-    width: 20%;
-
-}
-
-.footer_link
-{
-    text-decoration: none;
-    color: white;
-    margin: 5%;
-    text-align: center;
-}
 
 @media only screen and (max-width: 1100px){
     .m-right{
@@ -209,27 +153,6 @@ footer
     .m-nav-toggle{
         display: flex;
     }
-
-    .logo_footer
-    {
-        flex-direction: column;
-    }
-
-
-    .footer_cesi
-    {
-        width:60px;
-        height: 25px;
-    }
-
-    .link_nav
-    {
-        height: 66px;
-    }
-
-
-
-
 }
 
 
@@ -361,50 +284,6 @@ footer
     {
         height: 60px;
         width: 60px;
-    }
-
-    /*NAV LEFT*/
-    .nav_left
-    {
-        width:0;
-    }
-
-    /*FOOTER*/
-
-    footer
-    {
-        max-height: 160px;
-    }
-
-    .footer_link
-    {
-        padding: 0;
-        font-size:20pt;
-
-        margin: 0 20px;
-        margin-bottom: 15px;
-    }
-
-
-    .footer_cesi
-    {
-        width: 140px;
-        height: 55px;
-        margin-bottom: 10px;
-
-    }
-
-    .footer_bde
-    {
-        width:55px;
-    }
-
-    .logo_footer
-    {
-        flex-direction: column ;
-        width:230px;
-        height: 160px;
-
     }
 }
 
