--- a/public/css/create_edit.css
+++ b/public/css/create_edit.css
@@ -12,7 +12,10 @@ body {
 
 .creation {
   margin-left: 16%;
-  margin-top: 66px; }
+  margin-top: 66px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
 
 .t1 {
   margin-top: 10px;
@@ -39,12 +42,33 @@ button {
   border: none;
   border-radius: 2px;
   box-shadow: 2px 2px 6px #999;
-  font-size: 18pt;
+  font-size: 15pt;
   padding: 6px;
   float: left;
   margin-top: 10px;
   margin-bottom: 80px;
+  margin-right: 1%;
+  /*max-height: 40px;
+  max-width: 260px;*/ }
+
+.list {
+  background-color: #5D89DA;
+  color: #FFFFFF;
+  text-decoration: none;
+  border: none;
+  border-radius: 2px;
+  box-shadow: 2px 2px 6px #999;
+  font-size: 15pt;
+  padding: 6px;
   margin-right: 1%; }
+
+.list::-ms-expand {
+  display: none; }
+
+.list:focus {
+  border-color: #FFC252;
+  color: #FFFFFF;
+  outline: none; }
 
 button:hover {
   background-color: #FFC252; }
