--- a/resources/sass/create_edit.scss
+++ b/resources/sass/create_edit.scss
@@ -4,6 +4,9 @@
 {
     margin-left: 16%;
     margin-top: 66px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .t1
@@ -36,12 +39,36 @@ button
 {
     @include bg_blue;
     @include shadow;
-    font-size: 18pt;
+    font-size: 15pt;
     padding:6px;
     float :left;
     margin-top: 10px;
     margin-bottom: 80px;
     margin-right: 1%;
+    /*max-height: 40px;
+    max-width: 260px;*/
+
+}
+
+.list
+{
+    @include bg_blue;
+    @include shadow;
+    font-size: 15pt;
+    padding:6px;
+    margin-right: 1%;
+
+
+}
+
+.list::-ms-expand {
+    display: none;
+}
+
+.list:focus {
+    border-color: $orange;
+    color: $white;
+    outline: none;
 
 }
 
@@ -49,6 +76,8 @@ button:hover
 {
     background-color: $orange;
 }
+
+
 
 .choice
 {
