--- a/public/css/nav_bar.css
+++ b/public/css/nav_bar.css
@@ -93,7 +93,8 @@
   font-weight: 900;
   font-size: 35px;
   letter-spacing: 1px;
-  z-index: 99; }
+  z-index: 99;
+  text-decoration: none; }
 
 .cesi {
   max-height: 75px;
