--- a/public/css/nav_bar.css
+++ b/public/css/nav_bar.css
@@ -16,6 +16,16 @@
   top: 66px;
   padding: 10%; }
 
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: black;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 66px; }
+
 .logo_footer {
   z-index: 92;
   background-color: white;
@@ -57,7 +67,7 @@
     height: 66px; } }
 @media all and (max-device-width: 480px) {
   footer {
-    max-height: 160px; }
+    height: 160px; }
 
   .footer_link {
     padding: 0;
@@ -76,7 +86,10 @@
   .logo_footer {
     flex-direction: column;
     width: 230px;
-    height: 160px; } }
+    height: 160px; }
+
+  .link_footer {
+    height: 140px; } }
 .menu {
   background: black;
   width: 100%;
@@ -160,16 +173,6 @@ span.m-toggle-icon:before {
 
 span.m-toggle-icon:after {
   top: -14px; }
-
-footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: black;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  max-height: 66px; }
 
 @media only screen and (max-width: 1100px) {
   .m-right {
