--- a/resources/sass/_footer.scss
+++ b/resources/sass/_footer.scss
@@ -1,3 +1,17 @@
+
+footer
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: black;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 66px;
+}
+
+
 .logo_footer
 {
     z-index: 92;
@@ -63,7 +77,7 @@
 {
     footer
     {
-        max-height: 160px;
+        height: 160px;
     }
 
     .footer_link
@@ -95,5 +109,10 @@
         width:230px;
         height: 160px;
 
+    }
+
+    .link_footer
+    {
+        height: 140px;
     }
 }
