--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -7,7 +7,8 @@
 
 .events
 {
-    margin-left: 15%
+    margin-left: 15%;
+    margin-bottom: 66px;
 }
 
 .t1
@@ -47,12 +48,10 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    margin-bottom: 40px;
+    margin-top: 40px;
+}
 
-}
-.past_events
-{
-    margin-bottom: 80px;
-}
 
 .img_event
 {
@@ -105,7 +104,7 @@
     @include shadow;
     padding : 10px;
     margin-right:10px ;
-    margin-bottom: 80px;
+    margin-bottom: 10px;
     float: right;
     font-size: 120%;
 
@@ -147,6 +146,7 @@
     .events
     {
         margin-left: 0;
+        margin-bottom: 180px;
     }
 
 
@@ -155,6 +155,9 @@
 
         flex-direction :column;
         align-items: center;
+        margin-top: 20px;
+        margin-bottom: 30px;
+
 
     }
 
@@ -199,6 +202,6 @@
     {
         padding: 2% 10%;
         font-size: 27pt;
-        margin-bottom: 180px;
+        margin-bottom: 10px;
     }
 }
