--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,19 +1,18 @@
 .menu{
     background: black;
     width: 100%;
-    height: 70px;
-    line-height: 70px;
-    position: relative;
+    height: 66px;
+    line-height: 66px;
+    position: fixed;
+    z-index: 10;
+
 }
 
-.title{
-    height: 70px;
-    text-align: center;
+.bde{
     margin: 0;
     padding: 0;
     color: white;
     text-transform: uppercase;
-    font-family: 'Roboto';
     font-weight: 900;
     font-size: 35px;
     letter-spacing: 1px;
@@ -22,22 +21,20 @@
 }
 
 .cesi{
-    height: 70px;
-    width: 70px;
+    max-height: 75px;
+    max-width: 75px;
     float: left;
-    margin-right: 10px;
+    top: 0;
 }
 
 .logocesi{
-    width: 70px;
-    height: 70px;
-    text-align: center;
-    display: table-cell;
-    vertical-align: middle;
+    width: 65px;
+    height: 65px;
 }
 
 .m-left{
     float: left;
+    /*height: 66px;*/
 }
 
 .m-right{
@@ -45,34 +42,46 @@
 }
 
 .m-link{
+    text-decoration: none;
     color: white;
     text-transform: uppercase;
     font-weight: 700;
     padding: 0;
-    margin: 0 15px;
-
-    border-bottom: 2px solid transparent;
-    display: inline-block;
-    height: 70px;
+    margin: 0 15px ;
+    border-bottom: 3px solid transparent;
+    height: 64px;
+    display:flex;
 }
 
 .m-link:hover{
-    transition: 0.2s ease-in-out;
     border-color: white;
+    transition: 0.2s ease-in-out;
 }
 
-.m-link i{
-    margin-right: 5px;
-}
 
 .m-nav-toggle{
     width: 40px;
-    height: 70px;
+    height: 66px;
 
     display: none;
     align-items: center;
     float: right;
     cursor: pointer;
+}
+
+.link_nav
+{
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.basket , .login , .co
+{
+    width: 35px;
+    height: 35px;
+    margin-top: 12px;
+    margin-right: 5px;
 }
 
 span.m-toggle-icon, span.m-toggle-icon:before, span.m-toggle-icon:after{
@@ -89,37 +98,50 @@ span.m-toggle-icon, span.m-toggle-icon:before, span.m-toggle-icon:after{
 span.m-toggle-icon:before{top: 12px;}
 span.m-toggle-icon:after{top: -14px;}
 
+
 @media only screen and (max-width: 1100px){
     .m-right{
         position: absolute;
         top: 0;left: 0;right: 0;
         width: 100%;
-        height: auto;
+        height: 72px;
         background: black;
         transform: translateY(-100%);
-        transition: all 0.2s ease-in-out;
+        transition: all 0.3s ease-in-out;
         z-index: -1;
     }
+
+    .md-form
+    {
+        margin-top:5px;
+        margin-left: 5px;
+    }
     .m-link{
-        display: block;
+        display: flex;
         text-align: center ;
         padding: 0;
-        margin: auto;
-        height: 70px;
-        width: 100%;
-        margin: auto;
+        margin: 15px 20px;
+        height: 55px;
+        width: 200px;
+        justify-content: center;
+        align-items: center;
+
+    }
+
+    .basket, .login, .co
+    {
+        margin-top: 0;
+        margin-right: 10px;
     }
     .m-nav-toggle{
         display: flex;
-        cursor: pointer;
     }
-
 }
+
 
 .m-right.is-open{
     transform: translateX(0);
-    top: 70px;
-    z-index: 9999;
+    top: 65px;
 }
 
 .m-nav-toggle.is-open span.m-toggle-icon{
@@ -136,52 +158,116 @@ span.m-toggle-icon:after{top: -14px;}
     transform: rotate(-45deg);
 }
 
-/* DONE */
-
-.nav_left {
-    position: absolute;
-    background-color: #333333;
-    width: 15%;
-    height: 100%;
-}
-
-.img-cesi {
-    width: 100%;
-    height: 160px;
-    background-color: #ffffff;
-}
-
-.logo_cesi_ingenieur {
-    width: 100%;
-    height: auto;
-    padding: 10%;
-    background-size: cover;
-}
-
-.surleteco {
-    width: 15%;
-    height: 100%;
-    background-color: #201f1f;
-    position: fixed;
-
-}
-
-.criteres {
-    margin-top: 100px;
-}
-
-.prix, .catégories {
-    position: static;
-    width: 100%;
-    height: 150px;
-    border-left: 3px solid black;
-    border-right: 3px solid black;
-    background-color: #1a1919;
-    color: white;
-    font-family: 'Roboto';
+.span.searchbar{
+    float: left;
+    display: block;
+    color: black;
     text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
 }
 
-.prix {
-    margin-bottom: 50px;
+
+
+.md-form {
+    float: left;
 }
+
+
+/*MEDIA QUERIES FOR PHONE*/
+
+@media all and (max-device-width : 480px ) {
+
+    /*NAV BAR*/
+
+    .menu
+    {
+        height: 160px;
+        line-height: 160px;
+
+    }
+
+    .m-left
+    {
+        height: 160px;
+    }
+
+    .bde
+    {
+
+        font-size: 46pt;
+    }
+
+    .cesi
+    {
+        max-width: 150px;
+        max-height: 150px;
+        margin: 0 20px 0 0;
+    }
+
+    .logocesi
+    {
+        width: 150px;
+        height: 150px;
+    }
+
+    .m-nav-toggle
+    {
+        height: 160px;
+        width: 90px;
+    }
+    .md-form
+    {
+        margin-left:40%;
+    }
+
+
+    .m-right
+    {
+        line-height: 0;
+
+
+    }
+
+    .m-right.is-open
+    {
+        height:480px;
+        top:158px;
+        line-height: 160px;
+
+
+
+    }
+
+
+    .m-link
+    {
+        height: 160px;
+        font-size: 22pt;
+
+    }
+
+    .link_nav
+    {
+        height: 160px;
+        flex-direction: column;
+
+        margin:0;
+    }
+
+    .m-link
+    {
+        margin:0;
+        width: 400px;
+
+    }
+
+    .basket, .login, .co
+    {
+        height: 60px;
+        width: 60px;
+    }
+}
+
+
