--- a/public/css/show.css
+++ b/public/css/show.css
@@ -10,6 +10,42 @@ body {
   min-height: 100%;
   position: relative; }
 
+.comments {
+  margin: 60px 10px 80px 16%; }
+  @media all and (max-device-width: 480px) {
+    .comments {
+      display: inline-block;
+      align-items: center;
+      margin: 1%;
+      margin-bottom: 180px; } }
+
+textarea {
+  font-size: 15pt;
+  margin: 10px 0;
+  border: 2px solid #5D89DA;
+  border-radius: 2px;
+  color: #000000;
+  background-color: #FFD88F; }
+
+.comment {
+  border: solid 1px #5D89DA;
+  padding: 5px; }
+
+.t3 {
+  font-weight: normal;
+  margin: 10px; }
+
+@media all and (max-device-width: 480px) {
+  .to_comment {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+
+  .t3 {
+    font-size: 45px; }
+
+  .show {
+    margin-bottom: 0px; } }
 .events {
   margin-top: 76px;
   margin-left: 16%; }
@@ -180,7 +216,24 @@ button:hover {
   .show {
     float: right;
     margin-bottom: 80px;
-    margin-right: 12%; } }
+    margin-right: 12%; }
+
+  .show_admin {
+    font-size: 55%;
+    padding: 5px; }
+
+  .price {
+    font-size: 15pt; }
+
+  button {
+    font-size: 33pt; }
+
+  .adminevents {
+    justify-content: space-around;
+    margin-left: 0; }
+
+  .adminevents > a {
+    margin-left: 0; } }
 @media all and (max-device-width: 480px) {
   .events {
     margin-left: 0;
@@ -215,23 +268,12 @@ button:hover {
 
   .show {
     font-size: 30pt;
-    /*margin-right: 130px;*/
     float: left;
-    margin: 3% 30%;
+    margin: 1% 20%;
     text-align: center;
     margin-bottom: 180px; }
 
-  .price {
-    font-size: 15pt; }
-
   button {
-    font-size: 33pt; }
-
-  .adminevents {
-    justify-content: space-around;
-    margin-left: 0; }
-
-  .adminevents > a {
-    margin-left: 0; } }
+    font-size: 30pt; } }
 
 /*# sourceMappingURL=show.css.map */
