--- a/resources/sass/show.scss
+++ b/resources/sass/show.scss
@@ -1,5 +1,5 @@
 @import 'general';
-
+@import 'comments';
 
 .events
 {
@@ -256,7 +256,31 @@ button:hover
         margin-bottom: 80px;
         margin-right: 12%;
     }
-}
+
+    .show_admin {
+        font-size: 55%;
+        padding: 5px;
+
+    }
+
+
+    .price {
+        font-size: 15pt;
+    }
+
+    button {
+        font-size: 33pt;
+    }
+
+    .adminevents {
+        justify-content: space-around;
+        margin-left: 0;
+    }
+
+    .adminevents > a {
+            margin-left: 0;
+    }
+    }
 
 //MEDIA QUERIES FOR PHONE
 
@@ -304,55 +328,26 @@ button:hover
         font-size: 44pt;
         margin:40px;
 
-    }//MEDIA QUERIES FOR PC AND IPAD
-@media screen and (max-width: 800px)
-{
-    .show_admin
-    {
-        font-size: 55%;
-        padding: 5px;
-
     }
-}
 
-    .like
-    {
+    .like {
         font-size: 33pt;
         margin: 0;
     }
 
-    .show
-    {
+    .show {
         font-size: 30pt;
-        /*margin-right: 130px;*/
-        float:left;
-        margin: 3% 30%;
+        float: left;
+        margin: 1% 20%;
         text-align: center;
         margin-bottom: 180px;
-
-
-    }
-
-    .price
-    {
-        font-size:15pt;
     }
 
     button
     {
-        font-size: 33pt;
+        font-size: 30pt;
     }
-
-    .adminevents
-    {
-        justify-content: space-around;
-        margin-left: 0;
-    }
-
-    .adminevents > a
-    {
-        margin-left: 0;
-    }
-
 
 }
+
+
