--- a/resources/sass/show.scss
+++ b/resources/sass/show.scss
@@ -126,7 +126,7 @@ button
 {
     @include bg_blue;
     @include shadow;
-    font-size: 18pt;
+    font-size: 120%;
     padding:6px;
     border-radius:2px;
     box-shadow:2px 2px 6px #999;
