--- a/resources/sass/nav_bar.scss
+++ b/resources/sass/nav_bar.scss
@@ -7,11 +7,12 @@
     height: 66px;
     line-height: 66px;
     position: fixed;
-    z-index: 10;
+    z-index: 11;
 
 }
 
 .bde{
+    height: 66px;
     margin: 0;
     padding: 0;
     color: white;
@@ -23,16 +24,23 @@
     text-decoration: none;
 }
 
+.fa {
+    color: rgb(250, 104, 7);
+}
+
 .cesi{
-    max-height: 75px;
-    max-width: 75px;
+    height: 66px;
+    width: 66px;
     float: left;
-    top: 0;
+    margin-right: 10px;
 }
 
 .logocesi{
-    width: 65px;
-    height: 65px;
+    width: 66px;
+    height: 66px;
+    text-align: center;
+    display: table-cell;
+    vertical-align: middle;
 }
 
 .m-left{
@@ -52,7 +60,7 @@
     padding: 0;
     margin: 0 15px ;
     border-bottom: 3px solid transparent;
-    height: 64px;
+    height: 66px;
     display:flex;
 }
 
@@ -70,21 +78,6 @@
     align-items: center;
     float: right;
     cursor: pointer;
-}
-
-.link_nav
-{
-    display: flex;
-    flex-wrap: wrap;
-
-}
-
-.basket , .login , .co
-{
-    width: 35px;
-    height: 35px;
-    margin-top: 12px;
-    margin-right: 5px;
 }
 
 span.m-toggle-icon, span.m-toggle-icon:before, span.m-toggle-icon:after{
@@ -107,37 +100,25 @@ span.m-toggle-icon:after{top: -14px;}
         position: absolute;
         top: 0;left: 0;right: 0;
         width: 100%;
-        height: 72px;
+        height: auto;
         background: black;
         transform: translateY(-100%);
         transition: all 0.3s ease-in-out;
         z-index: -1;
     }
 
-    .md-form
-    {
-        margin-top:5px;
-        margin-left: 5px;
-    }
     .m-link{
-        display: flex;
+        display: block;
         text-align: center ;
         padding: 0;
-        margin: 15px 20px;
-        height: 55px;
-        width: 200px;
-        justify-content: center;
-        align-items: center;
-
+        margin: auto;
+        height: 66px;
+        width: 100%;
     }
 
-    .basket, .login, .co
-    {
-        margin-top: 0;
-        margin-right: 10px;
-    }
     .m-nav-toggle{
         display: flex;
+        cursor: pointer;
     }
 }
 
@@ -145,6 +126,7 @@ span.m-toggle-icon:after{top: -14px;}
 .m-right.is-open{
     transform: translateX(0);
     top: 65px;
+    z-index: 9999;
 }
 
 .m-nav-toggle.is-open span.m-toggle-icon{
@@ -160,23 +142,6 @@ span.m-toggle-icon:after{top: -14px;}
 .m-nav-toggle.is-open span.m-toggle-icon:after{
     transform: rotate(-45deg);
 }
-
-.span.searchbar{
-    float: left;
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-
-
-.md-form {
-    float: left;
-}
-
 
 /*MEDIA QUERIES FOR PHONE*/
 
@@ -218,11 +183,8 @@ span.m-toggle-icon:after{top: -14px;}
     .m-nav-toggle
     {
         height: 160px;
-        width: 90px;
-    }
-    .md-form
-    {
-        margin-left:40%;
+        width: 60px;
+        margin-right: 50px;
     }
 
 
@@ -261,15 +223,9 @@ span.m-toggle-icon:after{top: -14px;}
 
     .m-link
     {
-        margin:0;
+        margin:auto;
         width: 400px;
 
-    }
-
-    .basket, .login, .co
-    {
-        height: 60px;
-        width: 60px;
     }
 }
 
