--- a/public/css/header.css
+++ b/public/css/header.css
@@ -4,6 +4,234 @@
     height: 66px;
     line-height: 66px;
     position: fixed;
+    z-index: 11;
+}
+
+.title{
+    height: 66px;
+    margin: 0;
+    padding: 0;
+    color: white;
+    text-transform: uppercase;
+    font-family: 'Roboto';
+    font-weight: 900;
+    font-size: 35px;
+    letter-spacing: 1px;
+    z-index: 99;
+    text-decoration: none;
+}
+
+.fa {
+    color: rgb(250, 104, 7);
+}
+
+.cesi{
+    height: 66px;
+    width: 66px;
+    float: left;
+    margin-right: 10px;
+}
+
+.logocesi{
+    width: 66px;
+    height: 66px;
+    text-align: center;
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.m-left{
+    float: left;
+}
+
+.m-right{
+    float: right;
+}
+
+.m-link{
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 700;
+    padding: 0;
+    margin: 0 15px;
+    border-bottom: 3px solid transparent;
+    display: inline-block;
+    height: 66px;
+}
+
+.m-link:hover{
+    transition: 0.2s ease-in-out;
+    border-color: white;
+}
+
+.m-link i{
+    margin-right: 5px;
+}
+
+.m-nav-toggle{
+    width: 40px;
+    height: 66px;
+
+    display: none;
+    align-items: center;
+    float: right;
+    cursor: pointer;
+}
+
+
+span.m-toggle-icon, span.m-toggle-icon:before, span.m-toggle-icon:after{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 3px;
+    background: #fff;
+    transition: all 0.3s ease-in-out;
+    position: relative;
+
+}
+
+span.m-toggle-icon:before{top: 12px;}
+span.m-toggle-icon:after{top: -14px;}
+
+@media only screen and (max-width: 1100px){
+    .m-right{
+        position: absolute;
+        top: 0;left: 0;right: 0;
+        width: 100%;
+        height: auto;
+        background: black;
+        transform: translateY(-100%);
+        transition: all 0.2s ease-in-out;
+        z-index: -1;
+    }
+    .m-link{
+        display: block;
+        text-align: center ;
+        padding: 0;
+        margin: auto;
+        height: 66px;
+        width: 100%;
+    }
+        .m-nav-toggle{
+        display: flex;
+        cursor: pointer;
+    }
+
+ }
+
+ .m-right.is-open{
+     transform: translateX(0);
+     top: 65px;
+     z-index: 9999;
+ }
+
+ .m-nav-toggle.is-open span.m-toggle-icon{
+    background: transparent;
+ }
+
+ .m-nav-toggle.is-open span.m-toggle-icon:before, .m-nav-toggle.is-open span.m-toggle-icon:after{
+    transform-origin: center;
+    transform: rotate(45deg);
+    top: 0;
+ }
+
+ .m-nav-toggle.is-open span.m-toggle-icon:after{
+    transform: rotate(-45deg);     
+ }
+
+ @media all and (max-device-width : 480px ) {
+
+    /*NAV BAR*/
+
+    .menu
+    {
+        height: 160px;
+        line-height: 160px;
+
+    }
+
+    .m-left
+    {
+        height: 160px;
+    }
+
+    .bde
+    {
+
+        font-size: 46pt;
+    }
+
+    .cesi
+    {
+        max-width: 150px;
+        max-height: 150px;
+        margin: 0 20px 0 0;
+    }
+
+    .logocesi
+    {
+        width: 150px;
+        height: 150px;
+    }
+
+    .m-nav-toggle
+    {
+        height: 160px;
+        width: 60px;
+        margin-right: 50px;
+    }
+
+
+    .m-right
+    {
+        line-height: 0;
+
+
+    }
+
+    .m-right.is-open
+    {
+        height:480px;
+        top:158px;
+        line-height: 160px;
+
+
+
+    }
+
+
+    .m-link
+    {
+        height: 160px;
+        font-size: 22pt;
+
+    }
+
+    .link_nav
+    {
+        height: 160px;
+        flex-direction: column;
+
+        margin:0;
+    }
+
+    .m-link
+    {
+        margin:auto;
+        width: 400px;
+
+    }
+}
+
+
+
+/*.menu{
+    background: black;
+    width: 100%;
+    height: 66px;
+    line-height: 66px;
+    position: fixed;
     z-index: 10;
 
 }
@@ -35,7 +263,7 @@
 .m-left{
     float: left;
     /*height: 66px;*/
-}
+/*}
 
 .m-right{
     float: right;
@@ -177,11 +405,11 @@ span.m-toggle-icon:after{top: -14px;}
 
 /*MEDIA QUERIES FOR PHONE*/
 
-@media all and (max-device-width : 480px ) {
+/*@media all and (max-device-width : 480px ) {
 
     /*NAV BAR*/
 
-    .menu
+    /*.menu
     {
         height: 160px;
         line-height: 160px;
