--- a/resources/sass/_comments.scss
+++ b/resources/sass/_comments.scss
@@ -3,9 +3,15 @@
 {
     margin: 60px 10px 80px 16%;
 
+    @media screen and (max-width: 1100px)
+    {
+        margin-top: 180px;
+    }
+
     @media all and (max-device-width: 480px)
     {
-        display: inline-block;
+        display: flex;
+        flex-direction: column;
         align-items: center;
         margin: 1%;
         margin-bottom: 180px;
@@ -22,37 +28,34 @@ textarea
     background-color:#FFD88F;
 }
 
+.t3
+{
+    font-weight: normal;
+}
+
 .comment
 {
     border: solid 1px $blue;
     padding: 5px;
+    font-size: 15pt;
 
     @media all and (max-device-width: 480px) {
-
+        font-size: 30pt;
     }
-}
-
-.t3
-{
-    font-weight: normal;
-    margin: 10px;
 }
 
 @media all and (max-device-width: 480px) {
-    .to_comment
-    {
+
+    .to_comment {
         display: flex;
         flex-direction: column;
         align-items: center;
+        font-size: 30pt;
     }
 
-    .t3
+    .action
     {
-        font-size: 45px;
-    }
-
-    .show
-    {
-        margin-bottom: 0;
+        display: flex;
+        align-items: center;
     }
 }
