--- a/resources/sass/show.scss
+++ b/resources/sass/show.scss
@@ -105,22 +105,23 @@
     background-color: $orange;
 }
 
-.buttons_action
+.buttons_like
 {
-    display: flex;
-    justify-content: space-between;
     margin-left: 20px;
     margin-right: 10px;
-
+    width: 600px;
+    text-align: center;
+    margin-bottom: 5px;
 }
 
 .like
 {
-    margin-left: 16%;
     text-decoration: none;
     color: $black;
     font-size: 18pt;
 }
+
+
 
 button
 {
@@ -130,8 +131,7 @@ button
     padding:6px;
     border-radius:2px;
     box-shadow:2px 2px 6px #999;
-
-
+    margin-right: 10px;
 
 }
 
@@ -147,7 +147,18 @@ button:hover
     margin-left: 16%;
 }
 
+.action
+{
+    margin-left: 20px;
+    margin-right: 10px;
+}
 
+.participate
+{
+    display: flex;
+    justify-content: flex-end;
+    font-size: 150%;
+}
 
 
 //MEDIA QUERIES FOR PC AND IPAD
@@ -191,18 +202,14 @@ button:hover
 
     }
 
-    .buttons_action
+    .buttons_like
     {
-        display: flex;
-        justify-content: space-evenly;
-
+        width: 100%;
+        margin: 10px 0 10px 0;
     }
 
     .like
     {
-        margin-left: 16%;
-        text-decoration: none;
-        color: $black;
         font-size: 18pt;
     }
 
@@ -235,6 +242,11 @@ button:hover
         margin-right: 0;
     }
 
+    .action
+    {
+        height:100%;
+    }
+
 }
 
 
@@ -262,7 +274,6 @@ button:hover
         padding: 5px;
 
     }
-
 
     .price {
         font-size: 15pt;
@@ -324,7 +335,7 @@ button:hover
         margin:30px;
     }
 
-    .name{
+    .name {
         font-size: 44pt;
         margin:40px;
 
@@ -338,12 +349,22 @@ button:hover
     .show {
         font-size: 30pt;
         float: left;
-        margin: 1% 20%;
+        margin: 1% 1%;
         text-align: center;
         margin-bottom: 180px;
     }
 
     button
+    {
+        font-size: 33pt;
+    }
+
+    .description
+    {
+        text-align: justify;
+    }
+
+    .price
     {
         font-size: 30pt;
     }
