--- a/public/css/show_shop.css
+++ b/public/css/show_shop.css
@@ -11,48 +11,70 @@ body {
   position: relative; }
 
 .article {
-  width: 100%;
-  margin-bottom: 66px; }
-
-.container_article1 {
+  margin-top: 66px;
+  margin-left: 16%;
   width: 85%;
   float: right;
-  margin-top: 154px; }
+  margin-bottom: 90px; }
+  @media all and (max-device-width: 480px) {
+    .article {
+      margin-top: 160px;
+      margin-bottom: 190px;
+      margin-left: 0;
+      float: none;
+      width: 100%; } }
 
-.title_article1 {
-  font-family: 'Roboto';
+.container_article {
+  width: 85%;
+  float: right;
+  margin-top: 80px;
+  margin-bottom: 90px; }
+
+.title_article {
   text-align: center;
   font-size: 25px;
   color: #333;
-  border-bottom: 3px solid #f7b731;
+  border-bottom: 3px solid #FFC252;
   margin-left: 25%;
   margin-right: 25%; }
+  @media all and (max-device-width: 480px) {
+    .title_article {
+      font-size: 46pt; } }
 
-.container_img_articles1 {
+.container_img_article {
   width: 40%;
   height: 580px;
   margin: 60px auto auto auto; }
 
-.img_article1 {
+.img_article {
   width: 100%;
   height: 100%;
   background-size: cover;
   border-radius: 5px; }
 
-.description1 {
+.description {
   text-align: center;
   font-family: 'Lato';
   font-size: 20px;
   margin-top: 30px; }
 
-.purchase1 {
-  font-family: 'Lato';
+.purchase {
   font-size: 25px;
-  color: #ffffff;
   padding: 15px 20px;
-  border-radius: 5px;
-  background-color: #f7b731;
   text-decoration: none;
-  cursor: pointer; }
+  cursor: pointer;
+  margin-bottom: 80px;
+  background-color: #5D89DA;
+  color: #FFFFFF;
+  text-decoration: none;
+  border: none;
+  border-radius: 2px;
+  box-shadow: 2px 2px 6px #999; }
+  @media all and (max-device-width: 480px) {
+    .purchase {
+      margin-top: 50px; } }
+
+.purchase:hover {
+  background-color: #FFC252; }
 
 /*# sourceMappingURL=show_shop.css.map */
