--- a/public/css/show.css
+++ b/public/css/show.css
@@ -23,13 +23,16 @@ body {
       margin: 1%;
       margin-bottom: 180px; } }
 
-textarea {
+textarea, input {
   font-size: 15pt;
   margin: 10px 0;
   border: 2px solid #5D89DA;
   border-radius: 2px;
   color: #000000;
   background-color: #FFD88F; }
+  @media all and (max-device-width: 480px) {
+    textarea, input {
+      font-size: 35px; } }
 
 .t3 {
   font-weight: normal; }
@@ -41,6 +44,13 @@ textarea {
   @media all and (max-device-width: 480px) {
     .comment {
       font-size: 30pt; } }
+
+.add_img {
+  max-width: 500px; }
+
+.added_img {
+  max-width: 500px;
+  margin: 20px; }
 
 @media all and (max-device-width: 480px) {
   .to_comment {
@@ -131,14 +141,12 @@ textarea {
   @media screen and (max-width: 1100px) {
     .show {
       float: right;
-      margin-bottom: 80px;
-      margin-right: 25%; } }
+      margin-bottom: 80px; } }
 
 .show:hover {
   background-color: #FFC252; }
 
 .buttons_action {
-  margin-left: 16%;
   margin-right: 10px;
   width: 600px;
   text-align: center;
@@ -154,8 +162,7 @@ textarea {
   margin-left: 10px; }
   @media screen and (max-width: 1100px) {
     .like {
-      font-size: 18pt;
-      margin-right: 140px; } }
+      font-size: 18pt; } }
 
 button {
   background-color: #5D89DA;
@@ -176,8 +183,7 @@ button:hover {
 
 .adminevents {
   display: flex;
-  justify-content: space-between;
-  margin-left: 16%; }
+  justify-content: space-between; }
   @media screen and (max-width: 1100px) {
     .adminevents {
       justify-content: space-around; } }
@@ -220,10 +226,10 @@ button:hover {
     font-size: 15pt; }
 
   button {
-    font-size: 33pt; }
+    font-size: 30px; }
 
   .adminevents {
-    justify-content: space-around;
+    justify-content: space-between;
     margin-left: 0; }
 
   .adminevents > a {
@@ -263,13 +269,12 @@ button:hover {
     margin: 0; }
 
   .like {
-    font-size: 27pt;
+    font-size: 26pt;
     margin: 0; }
 
   .show {
     font-size: 30pt;
     float: left;
-    margin: auto;
     text-align: center;
     margin-bottom: 180px; }
 
@@ -280,6 +285,9 @@ button:hover {
     text-align: justify; }
 
   .price {
-    font-size: 27pt; } }
+    font-size: 26pt; }
+
+  .action {
+    justify-content: center; } }
 
 /*# sourceMappingURL=show.css.map */
