--- a/resources/sass/_comments.scss
+++ b/resources/sass/_comments.scss
@@ -18,7 +18,7 @@
     }
 }
 
-textarea
+textarea, input
 {
     font-size: 15pt;
     margin: 10px 0;
@@ -26,6 +26,11 @@ textarea
     border-radius:2px;
     color: $black;
     background-color:#FFD88F;
+
+    @media all and (max-device-width: 480px)
+    {
+        font-size: 35px;
+    }
 }
 
 .t3
@@ -42,6 +47,17 @@ textarea
     @media all and (max-device-width: 480px) {
         font-size: 30pt;
     }
+}
+
+.add_img
+{
+    max-width: 500px;
+}
+
+.added_img
+{
+    max-width: 500px;
+    margin : 20px;
 }
 
 @media all and (max-device-width: 480px) {
