--- a/resources/sass/create_edit.scss
+++ b/resources/sass/create_edit.scss
@@ -45,9 +45,18 @@ button
     margin-top: 10px;
     margin-bottom: 80px;
     margin-right: 1%;
-    /*max-height: 40px;
-    max-width: 260px;*/
+}
 
+.show {
+    @include bg_blue;
+    @include shadow;
+    text-align: center;
+    font-size: 15pt;
+    padding: 6px;
+    float: right;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-bottom: 80px;
 }
 
 .list
@@ -58,18 +67,23 @@ button
     padding:6px;
     margin-right: 1%;
 
+    @media all and (max-device-width : 480px )
+    {
+        font-size: 30pt;
+    }
+
 
 }
 
 .list::-ms-expand {
     display: none;
+
 }
 
 .list:focus {
     border-color: $orange;
     color: $white;
     outline: none;
-
 }
 
 button:hover
@@ -77,7 +91,10 @@ button:hover
     background-color: $orange;
 }
 
-
+.show:hover
+{
+    background-color: $orange;
+}
 
 .choice
 {
@@ -99,6 +116,7 @@ button:hover
     {
         display: flex;
         flex-direction: column;
+        justify-content: center;
 
     }
 
@@ -118,10 +136,11 @@ button:hover
         border: 5px solid $blue;
     }
 
-    button
+    button, .show
     {
         font-size: 46pt;
         padding: 20px 50px;
+        margin: auto;
         margin-bottom: 180px;
         margin-top: 50px;
         margin-left: 1%;
